--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "flooent": "^2.5.0",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "reactflow": "^11.10.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.7",
