--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "npx jest"
   },
   "dependencies": {
+    "@million/lint": "^0.0.73",
     "flooent": "^2.5.0",
+    "million": "^3.0.6",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
